[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI_default_theme.tres" type="Theme" id=1]
[ext_resource path="res://Scripts/Objects/MetaObjects/Physics_Object_UI.gd" type="Script" id=2]
[ext_resource path="res://Textures/ForceBar_empty.png" type="Texture" id=3]
[ext_resource path="res://Textures/ForceBar_full.png" type="Texture" id=4]

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
mouse_default_cursor_shape = 1
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -48.0
margin_right = 85.0
grow_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbl_type" type="Label" parent="VBoxContainer"]
margin_right = 85.0
margin_bottom = 22.0
text = "Typ"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 26.0
margin_right = 85.0
margin_bottom = 48.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_right = 51.0
margin_bottom = 22.0
text = "Masse: "

[node name="lbl_mass" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 55.0
margin_right = 64.0
margin_bottom = 22.0
text = "0"

[node name="lbl_unit" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 68.0
margin_right = 85.0
margin_bottom = 22.0
text = "kg"

[node name="lbl_hint" type="Label" parent="VBoxContainer"]
margin_top = 52.0
margin_right = 85.0
margin_bottom = 74.0
text = "Hinweis"

[node name="ForceBar" type="VBoxContainer" parent="."]
anchor_left = 0.934
anchor_top = 0.95
anchor_right = 0.934
anchor_bottom = 0.95
grow_horizontal = 2
grow_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ForceBar"]
margin_right = 109.0
margin_bottom = 22.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 0
text = "Anschubsen"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureProgress" type="TextureProgress" parent="ForceBar"]
margin_top = 26.0
margin_right = 109.0
margin_bottom = 44.0
size_flags_horizontal = 3
size_flags_vertical = 2
value = 30.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 4 )
